main setup. tests successfull.

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ button:hover {
 /* Character Specific Colors */
 #bucky { background-color: #8b4513; } /* Brown for Beaver */
 #scarlett { background-color: #f0e68c; } /* Khaki for Rabbit */
+#finley { background-color: #d2691e; } /* Chocolate for Fox */
 
 
 .item {
